syntax = "proto3";

option go_package = "github.com/npc_ric/pkg/grpc/auth";

package auth;

service Verify {
  rpc Verify (VerifyRequest) returns (VerifyResponse);
}

message VerifyRequest {
  string token = 1;
}

message VerifyResponse {
  bool is_admin = 1;
}